--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>info.poligon</groupId>
-    <artifactId>PoligonCommanderM</artifactId>
+    <artifactId>PoligonCommander</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>PoligonCommanderM</name>
+    <name>PoligonCommander</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
