--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>info.poligon</groupId>
     <artifactId>PoligonCommander</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>PoligonCommander</name>
 
