--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 /target/
 /src/main/resources/hibernate.cfg.xml
 /META-INF/persistence.xml
-nb-configuration.xml
-nbactions.xml
-PoligonCommanderJ.iml
-poligoncommanderj.properties
-PoligonCommander.iml
+/nb-configuration.xml
+/nbactions.xml
+/PoligonCommanderJ.iml
+/poligoncommanderj.properties
+/PoligonCommander.iml
