--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,12 @@
             <artifactId>jsch</artifactId>
             <version>0.1.53</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.samba.jcifs/jcifs -->
+        <dependency>
+            <groupId>org.samba.jcifs</groupId>
+            <artifactId>jcifs</artifactId>
+            <version>1.3.3</version>
+        </dependency>
 
     </dependencies>
 </project>
